# example-indexer

./: .gitignore  Cargo.toml  README.md
migrations/: 20230724152410_example_migration.sql
src/: lib.rs  main.rs  settings.rs
src/api/: error.rs  mod.rs
src/api/v1/: docs.rs  mod.rs
src/api/v1/example/: mod.rs  requests.rs  responses.rs
src/indexer/: mod.rs  utils.rs
src/indexer/abi/: ExampleAbi.abi.json  mod.rs
src/indexer/parsing/: mod.rs
src/models/: caches.rs  mod.rs
src/models/abi/: example_abi.rs  mod.rs
src/services/: example.rs  mod.rs
src/sqlx_client/: mod.rs  users.rs
