[package]
name = "example-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
futures = { version = "0.3" }
config = { version = "0.13.3", default-features = false }
log = { version = "0.4", features = ["std", "serde"] }
url = { version = "2.2.2", features = ["serde"] }
itertools = "0.11.0"

stackdriver_logger = { git = "https://github.com/dexpa/stackdriver-logger" }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

transaction-consumer = { git = "https://github.com/broxus/transaction-consumer", branch = "update" }
transaction-buffer = {git = "https://github.com/broxus/transaction-buffer.git"}

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

